# canton_builders

./: .env  .gitignore  AGENTS.md  CLAUDE.md  README.md  RealEstate.daml  main.py  pyproject.toml  run-app.sh  ui.py  ui2.py
dreal/: client.py  settings.py  types.py
python_client/: client.py
real-estate/: AGENTS.md  README.md  daml.yaml  run-app.sh  run-sandbox.sh  sandbox.conf
real-estate/daml/: Main.daml  RealEstate.daml  Test.daml
real-estate/python_client/: client.py  requirements.txt  ui.py
